# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.643 2009/09/20 19:41:10 nixnut Exp $

  20 Sep 2009; nixnut <nixnut@gentoo.org> gentoo-sources-2.6.30-r5.ebuild:
  ppc stable #283928

  18 Sep 2009; Mike Pagano <mpagano@gentoo.org>
  gentoo-sources-2.6.26-r4.ebuild:
  Fix minor repoman warning

*gentoo-sources-2.6.30-r7 (16 Sep 2009)

  16 Sep 2009; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.30-r7.ebuild:
  Linux patch versions 2.6.30.6 and 2.6.30.7. Header fix for sysrq.h to
  include errno.h.

  16 Sep 2009; Olivier Crête <tester@gentoo.org>
  gentoo-sources-2.6.30-r5.ebuild:
  Stable onb amd64, bug #283928

*gentoo-sources-2.6.31 (10 Sep 2009)

  10 Sep 2009; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.31.ebuild:
  Initial 2.6.31 release including the fbcondecor patch,, a paoatch to
  enable control of the unaligned access control policy from sysctl and a
  patch for bad block relocation support for LiveCD users.

  05 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.30-r6.ebuild:
  alpha/arm/ia64/sh/sparc stable

*gentoo-sources-2.6.30-r6 (29 Aug 2009)

  29 Aug 2009; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.30-r6.ebuild:
  Linux version 2.6.30.5

  28 Aug 2009; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.29-r5.ebuild, gentoo-sources-2.6.30-r4.ebuild,
  gentoo-sources-2.6.30-r5.ebuild:
  alpha/arm/ia64/sh/sparc/x86 stable

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  gentoo-sources-2.6.30-r4.ebuild:
  Stable on alpha, bug #279685

*gentoo-sources-2.6.30-r5 (14 Aug 2009)

  14 Aug 2009; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.30-r5.ebuild:
  Fix for (CVE-2009-2692), Kernel: NULL pointer dereference due to incorrect
  proto_ops initializations. Fix for Linux Kernel clock_nanosleep() NULL